--- a/package.json
+++ b/package.json
@@ -11,16 +11,12 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-navigation": "4.1.1",
-    "@expo/vector-icons": "^14.0.0",
     "react-native-paper": "4.9.2",
-    "react-native-screens": "~3.29.0",
-    "react-navigation-stack": "*",
-    "@react-navigation/stack": "*",
+    "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "*",
-    "react-native-gesture-handler": "~2.14.0",
+    "@react-navigation/native-stack": "*",
     "react-native-safe-area-context": "4.8.2",
-    "@react-native-community/masked-view": "^0.1.0"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
